# Real-Time-HybridRAG-MVP

./: .env.example  .gitignore  Makefile  README.md  databricks.yml  pyproject.toml  runbook.md
.github/workflows/: prd-post-merge-deploy.yml  prd-pr-stepwise-deploy.yml
data/sample/: kafka_flink_lineage.csv
deploy/docker/: Dockerfile  docker-compose.neo4j.yml  docker-compose.streaming.yml
deploy/k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml  serviceaccount-irsa.yaml
deploy/terraform/: irsa_policy.json
docs/: all_3_additions_summary.md  architecture.md  cost_model.md  deployment.md  production_deployment_aws_eks.md  runbook.md
flink-embedding-udf/: pom.xml
resources/connectors/: README.md
resources/connectors/templates/: graph_sink_neo4j.tmpl.json  vector_sink_databricks_jdbc.tmpl.json
resources/graph/: neo4j_constraints.cql
resources/jobs/: build_graph.yml  build_vector_index.yml  deploy_mcp_langgraph.yml  eval_rag.yml  flink_realtime_hybrid_updates.sql  ingest_documents.yml
resources/schemas/: document_chunks.sql  document_chunks_enable_cdf.sql  graph_edges.sql  graph_nodes.sql
scripts/: deploy_connectors.py  init_kafka_topics.sh
src/dataops_graphrag_mcp/app/: api.py  cli.py
src/dataops_graphrag_mcp/common/: langsmith.py  logging.py  settings.py
src/dataops_graphrag_mcp/evaluation/: __init__.py  langsmith_eval.py
src/dataops_graphrag_mcp/graphrag/: graph_retriever.py  populate_from_metadata.py
src/dataops_graphrag_mcp/hybrid/: evidence_merger.py  query_router.py  response_contract.py
tests/: test_mvp.py
(+17 files in other folders)
